<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:gravity="center"
        android:text="@string/true_false"
        android:textSize="40sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:id="@+id/tvNum1"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="29sp"
            android:layout_marginRight="30dp"
            android:text="@string/_1st_number"/>

        <TextView
            android:id="@+id/tvNum2"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="29sp"
            android:text="@string/_2nd_number"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="50dp">

        <Button
            android:id="@+id/btnLess"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:backgroundTint="#000000"
            android:text="@string/smallerSymbol" />

        <Button
            android:id="@+id/btnEqual"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:textSize="20sp"
            android:backgroundTint="#000000"
            android:text="@string/equalSymbol" />

        <Button
            android:id="@+id/btnGreater"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:textSize="20sp"
            android:backgroundTint="#000000"
            android:text="@string/greaterSymbol" />
    </LinearLayout>

    <Button
        android:id="@+id/btnGenerate"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginTop="30dp"
        android:backgroundTint="#000000"
        android:text="@string/click_for_number" />

</LinearLayout>